--- a/app/src/main/res/layout/activity_add_bank.xml
+++ b/app/src/main/res/layout/activity_add_bank.xml
@@ -38,7 +38,7 @@
                         android:background="@null"
                         android:textSize="14sp"
                         android:gravity="right"
-                        android:maxLength="16"
+                        android:maxLength="19"
                         android:inputType="number"
                         android:text="@={viewModel.bankCard}"
                         android:textColor="@color/font_black"
@@ -153,6 +153,7 @@
                         android:background="@null"
                         android:textSize="14sp"
                         android:gravity="right"
+                        android:inputType="phone"
                         android:text="@={viewModel.mobile}"
                         android:textColor="@color/font_black"
                         android:paddingStart="15dp"
