--- a/app/src/main/res/layout/activity_find_password.xml
+++ b/app/src/main/res/layout/activity_find_password.xml
@@ -2,6 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
         xmlns:bind="http://schemas.android.com/apk/res-auto">
     <data class="FindPwdBinding">
+        <import type="android.text.InputType"/>
         <variable name="viewModel" type="com.xinly.dendrobe.module.user.FindPwdViewModel"/>
     </data>
     <LinearLayout
@@ -40,7 +41,7 @@
                         android:id="@+id/et_account"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="phone"
+                        android:inputType="@{(viewModel.findType==0)?InputType.TYPE_CLASS_PHONE:InputType.TYPE_TEXT_VARIATION_EMAIL_ADDRESS}"
                         android:text="@={viewModel.accountName}"
                         android:textColor="@color/font_black"
                         android:textSize="15sp"
