[ft]修复推荐人文案错误

--- a/app/src/main/res/layout/activity_c2c_trader.xml
+++ b/app/src/main/res/layout/activity_c2c_trader.xml
@@ -11,5 +11,13 @@
             tools:context=".module.trader.C2CTraderActivity">
 
         <include layout="@layout/layout_toolbar" bind:toolBar="@{viewModel}"/>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:background="@color/bg_btn_black">
+
+
+        </LinearLayout>
     </LinearLayout>
 </layout>
