--- a/app/src/main/res/layout/activity_wallet.xml
+++ b/app/src/main/res/layout/activity_wallet.xml
@@ -87,10 +87,12 @@
 
                 <ImageView android:layout_width="wrap_content"
                            android:layout_height="match_parent"
+                           android:visibility="gone"
                            android:src="@drawable/wallet_line_vertical"/>
 
                 <FrameLayout android:layout_width="0dp"
                              android:layout_weight="1"
+                             android:visibility="gone"
                              android:layout_height="match_parent">
 
                     <TextView android:layout_width="wrap_content"
